--- a/.gitignore
+++ b/.gitignore
@@ -104,9 +104,4 @@ dist
 .tern-port
 
 # Mockup photo
-mockup-main.png
-mockup-main1.png
-mockup-main2.png
-mockup-main3.png
-mockup-main4.png
-mockup-main5.png
+mockup-main*.png
